--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@
 }
 
 @media screen and (max-width:576px) {
-  .quiz-content {
+  .quiz-content, .highscores-container {
     width: 95%;
   }
 }
